--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:icon="@drawable/boophee_icon"
             android:name=".introSlider"
             android:label="@string/app_name">
             <intent-filter>
@@ -22,6 +23,7 @@
         <activity android:name=".NewCard"></activity>
         <activity android:name=".Licence"></activity>
         <activity android:name=".CardSwipeActivity"></activity>
+        <activity android:name=".Notifications"></activity>
     </application>
 
 </manifest>
