--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -31,8 +35,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     compile 'com.bakerj:infinite-cards:1.0.3'
     compile 'in.arjsna:swipecardlib:1.0.2'
+    compile 'com.anupcowkur:reservoir:3.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.google.code.gson:gson:2.6.2'
+
     compile 'com.github.apl-devs:appintro:v4.2.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
